# bugs_assessment

./: .gitignore  README.md  pyproject.toml
bugs/: settings.py  urls.py
custom_user/: admin.py  forms.py  models.py  views.py
custom_user/migrations/: 0001_initial.py
homepage/: forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200831_1759.py
templates/: index.html  ticket_detail.html  user_detail.html
