[tool.poetry]
name = "bugs"
version = "0.1.0"
description = "Create tickets for fixing bugs in app. Allows for logging in, creation o of ticket, assigning ticket, and tracking progress of ticket."
authors = ["Michael DeMory <mjdemory2891@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
